--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
-    "lodash": "^4.17.15",
+    "focus-trap-react": "^8.3.2",
+    "history": "^5.0.0",
+    "jQuery": "^1.7.4",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "node-sass": "^4.13.1",
+    "object-path": "^0.11.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "react-snapshot": "^1.3.0"
+    "react-scripts": "^3.4.4",
+    "react-snapshot": "^1.3.0",
+    "webpack": "^4.42.0"
   },
   "repository": {
     "type": "git",
